tests/derive_errors/struct/empty_cstruct.stderr
error: jtd-derive does not support cstruct-like structs
 --> tests/derive_errors/struct/empty_cstruct.rs:2:8
  |
2 | struct EmptyCstruct {}
  |        ^^^^^^^^^^^^
