tests/derive_errors/struct/empty_cstruct.rs
#[derive(jtd_derive::JsonTypedef)]
struct EmptyCstruct {}

fn main() {}
